restart/audit/totality/astral/V6/CRUD-LOG.md
# Pass Omega V6 CRUD Log

Pass: Pass Omega.
Cycle: V6.
Gate: G-Omega closed.
Gate timestamp: 2026-05-26T16:14:55Z.
Status: complete.

## Gate Record

G-Omega closed by explicit user authorization recorded in
`restart/audit/totality/astral/V6/G-OMEGA-SIGNOFF.md`.

## Receiver Log

| CRUD | Receiver | Operation | Files | Status | Commit | Notes |
|---|---|---|---|---|---|---|
| CRUD-3 | LOCKS | Read no-op | `restart/locks/LOCKS.md` | complete | no-op | `locks-diff.md` is zero delta; 16-lock count preserved; 5-shape BackendShape canon preserved |
| CRUD-1 | ARCHITECTURE | Read no-op | `restart/ARCHITECTURE.md` | complete | no-op | W5BR is wave-graph/generator-gate sequencing only; no architecture or BackendShape change |
| CRUD-2 | MASTER-PLAN + SK-V14 SPEC authority | Update | `restart/MASTER-PLAN.md`, `restart/skinny/tranches/sk-v14/{SPEC,SYNTHESIS,ORCHESTRATOR-PROMPT,DISPATCH-PROMPT}.md` | complete | this commit | W5B split into W5B-GEN provider-free generator body and W5C-DELETE provider/template deletion; W6 depends on W5C-DELETE |
| CRUD-4 | HANDOFF + MIGRATION | Update | `restart/HANDOFF.md`, `restart/MIGRATION.md`, `restart/skinny/tranches/sk-v14/HANDOFF.md` | complete | this commit | REDRESS-210/W5BR routed; W5B-GEN recorded as next dispatch |
| CRUD-5 | SKINNY CORPUS | Update | `restart/skinny/{INDEX,WORKSPACE,HARDENING,COMPILER}.md` | complete | this commit | Active authority and refusal posture align with W5BR; BENCH/SUBSTRATE read/no-op |
| CRUD-6 | AUDIT + CLEANUP | Add close log + signoff | `restart/audit/totality/astral/V6/{CRUD-LOG,G-OMEGA-SIGNOFF}.md` | complete | this commit | REDRESS-210 supersession note landed in `skinny/REDRESS.md`; no source/generated/RESULTS movement |

## CRUD-6 Verification

Read-only inventory + cross-reference reconciliation:

- 16-lock count: PRESERVED (`grep -cE "^[0-9]+\. \*\*" restart/locks/LOCKS.md` = 16).
- BackendShape canon: five variants only: `EagerTape`, `OffsetTape`,
  `EventTape`, `SinkOnly`, `CollapsedStage`.
- FactStream remains a Lock 1 substrate-manifest category, not a 6th
  `BackendShape` variant.
- Pattern H = 67 hand-written runtime files:
  `find crates/core/src/runtime -mindepth 2 -type f -name '*.rs' | wc -l` =
  67.
- LOCKS, ARCHITECTURE, source files, generated files, gates, `RESULTS.md`, and
  `restart/skinny/ROLLING-SOTA-DELTA.md` were not changed by V6 CRUD.
- BENCH and SUBSTRATE were read/no-op: no W5BR wave-graph drift was present.

## Legacy Doc Nuke

NONE for this cycle. V6 is a local W5BR wave-graph correction under
`restart/audit/totality/astral/V6/`. It does not archive or delete prior
tranche artifacts.

## Next Dispatch

The next sequenced step is SK-V14 W5B-GEN wave-triumvirate under the amended
provider-free generator-body gate:

1. W5B-GEN research confirms current live `RuntimeProvider` /
   `GrammarProfile` / `render_runtime_profile` reachability, CSS/JSON
   source+metadata emission surfaces, W5A proof carry, and provider/template
   deletion residue boundaries.
2. W5B-GEN plan selects one provider-free generator-body intervention, names
   exact owner paths, stays within the <=1.0k C-1 part-A cap, and forbids
   provider/template deletion.
3. W5B-GEN redress implements the provider-free body, runs provider-reachability
   grep, `regen-css`, all seven CSS companions, `check-json`, gate-json, and
   W5A proof carry; it admits or records REDRESS honestly.

W5C-DELETE remains blocked until W5B-GEN closes. W6 remains blocked until
W5C-DELETE closes. W8/W9/W10 remain globally blocked until PRUNE-1..PRUNE-5
close.
