restart/audit/totality/astral/V7/CRUD-LOG.md
# Pass Omega V7 CRUD Log

Pass: Pass Omega.
Cycle: V7.
Gate: G-Omega closed.
Gate timestamp: 2026-05-26T17:55:50Z.
Status: complete.

## Gate Record

G-Omega closed by explicit user authorization recorded in
`restart/audit/totality/astral/V7/G-OMEGA-SIGNOFF.md`.

## Receiver Log

| CRUD | Receiver | Operation | Files | Status | Commit | Notes |
|---|---|---|---|---|---|---|
| CRUD-3 | LOCKS | Read no-op | `restart/locks/LOCKS.md` | complete | no-op | `locks-diff.md` is zero delta; 16-lock count preserved; 5-shape BackendShape canon preserved |
| CRUD-1 | ARCHITECTURE | Read no-op | `restart/ARCHITECTURE.md` | complete | no-op | W5B-GENR is wave-graph/frontend-generator sequencing only; no architecture or BackendShape change |
| CRUD-2 | MASTER-PLAN + SK-V14 SPEC authority | Update | `restart/MASTER-PLAN.md`, `restart/skinny/tranches/sk-v14/{SPEC,SYNTHESIS,ORCHESTRATOR-PROMPT,DISPATCH-PROMPT}.md` | complete | this commit | W5B-GEN split into W5B-FRONTEND frontend/import/IR closure, W5C-GEN provider-free generator body, and W5D-DELETE provider/template deletion; W6 depends on W5D-DELETE |
| CRUD-4 | HANDOFF + MIGRATION | Update | `restart/HANDOFF.md`, `restart/MIGRATION.md`, `restart/skinny/tranches/sk-v14/HANDOFF.md` | complete | this commit | REDRESS-211/W5B-GENR routed; W5B-FRONTEND recorded as next dispatch |
| CRUD-5 | SKINNY CORPUS | Update | `restart/skinny/{INDEX,WORKSPACE,HARDENING,COMPILER}.md` | complete | this commit | Active authority and refusal posture align with W5B-GENR; BENCH/SUBSTRATE read/no-op |
| CRUD-6 | AUDIT + CLEANUP | Add close log + signoff | `restart/audit/totality/astral/V7/{CRUD-LOG,G-OMEGA-SIGNOFF}.md` | complete | this commit | No source/generated/RESULTS movement |

## CRUD-6 Verification

Read-only inventory + cross-reference reconciliation:

- 16-lock count: PRESERVED (`grep -cE "^[0-9]+\. \*\*" restart/locks/LOCKS.md` = 16).
- BackendShape canon: five variants only: `EagerTape`, `OffsetTape`,
  `EventTape`, `SinkOnly`, `CollapsedStage`.
- FactStream remains a Lock 1 substrate-manifest category, not a 6th
  `BackendShape` variant.
- Pattern H = 67 hand-written runtime files:
  `find crates/core/src/runtime -mindepth 2 -type f -name '*.rs' | wc -l` =
  67.
- LOCKS, ARCHITECTURE, source files, generated files, gates, `RESULTS.md`, and
  `restart/skinny/ROLLING-SOTA-DELTA.md` were not changed by V7 CRUD.
- BENCH and SUBSTRATE were read/no-op: no W5B-GENR wave-graph drift was
  present.

## Legacy Doc Nuke

NONE for this cycle. V7 is a local W5B-GENR wave-graph correction under
`restart/audit/totality/astral/V7/`. It does not archive or delete prior
tranche artifacts.

## Next Dispatch

The next sequenced step is SK-V14 W5B-FRONTEND wave-triumvirate under the
amended frontend/import/IR closure gate:

1. W5B-FRONTEND research confirms current grammar frontend limitations, CSS L4
   compatibility construct handling (`@ws`, `@pretty`, `?w`, `>>`, `<<`, span
   capture, typed host projections, import graph), W5A proof carry, and
   provider/template deletion boundaries.
2. W5B-FRONTEND plan selects one frontend/import/IR intervention, names exact
   owner paths, stays within the <=1.0k C-1 part-A cap, adds Lock 14 owner-path
   / parent-diff routing before source redress, and forbids provider-free
   generator replacement or provider/template deletion.
3. W5B-FRONTEND redress implements the frontend/import/IR closure, proves
   compatibility lowering into canonical IR, preserves JSON/Sheets/BBNF-self
   proof, runs the Lock 14 parent-diff unit test, and admits or records REDRESS
   honestly.

W5C-GEN remains blocked until W5B-FRONTEND closes. W5D-DELETE remains blocked
until W5C-GEN closes. W6 remains blocked until W5D-DELETE closes. W8/W9/W10
remain globally blocked until PRUNE-1..PRUNE-5 close.
